--- a/src/admin/user/style.css
+++ b/src/admin/user/style.css
@@ -8,3 +8,5 @@
     /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     background: linear-gradient(to right bottom, #A0E9F6, #005C97);
 }
+
+@import '~bootstrap/dist/css/bootstrap.min.css';
